--- a/dashboard/home/templates/includes/sample_footer.html
+++ b/dashboard/home/templates/includes/sample_footer.html
@@ -1,24 +1,24 @@
 <footer class="footer">
-    <div class="container-fluid">
-        <ul class="nav">
-            <li class="nav-item">
-                <a href="#" target="_blank" class="nav-link">
-                    LINK_1
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" target="_blank" class="nav-link">
-                    LINK_2
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="https://afadesign.co/" target="_blank" class="nav-link">
-                    Support
-                </a>
-            </li>
-        </ul>
-        <div class="copyright">
-            &copy; Andreas Fahl 2024
-        </div>
+  <div class="container-fluid">
+    <ul class="nav">
+      <li class="nav-item">
+        <a href="#" target="_blank" class="nav-link">
+          LINK_1
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" target="_blank" class="nav-link">
+          LINK_2
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="https://appseed.us/support/" target="_blank" class="nav-link">
+          Support
+        </a>
+      </li>
+    </ul>
+    <div class="copyright">
+      &copy; Your Company Here
     </div>
+  </div>
 </footer>
