--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/cards/_card-stats-mini.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/cards/_card-stats-mini.scss
@@ -1,7 +1,7 @@
 .card-stats-mini {
   &.card-background::after {
     background-image: linear-gradient(to right, #434343 0%, black 100%);
-    opacity: .94;
+    opacity: 0.94;
   }
 
   .card-body {
@@ -10,19 +10,17 @@
       content: '';
       display: block;
     }
+
+    &.card-background {
+      min-height: auto;
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
   }
 
   .card-footer {
     border-top: 1px solid $opacity-2;
     margin: 0 15px;
-  }
-
-  &.card-background {
-    .card-body {
-      min-height: auto;
-      padding-top: 15px;
-      padding-bottom: 15px;
-    }
   }
 
   .card-title {
@@ -49,5 +47,10 @@
   .stats {
     text-align: left;
     color: $white-color;
+  }
+
+  .card-footer {
+    border-top: 1px solid $opacity-2;
+    margin: 0 15px;
   }
 }
