--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/_global.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/_global.scss
@@ -1,31 +1,34 @@
-// Nucleo icons
+/* Nucleo icons */
 
-.section-nucleo-icons .icons-container {
-  position: relative;
-  max-width: 100%;
-  height: 360px;
-  margin: 0 auto;
-  z-index: 1;
-}
-
-.section-nucleo-icons {
-
+.nucleo-icons-container {
   --icon-size: 5rem;
   --icon-sm-size: 3.75rem;
   --gutter: 7rem;
+  --grid-columns: repeat(3, 1fr);
+  --grid-rows: repeat(4, 1fr);
 
   .icons-container {
+    position: relative;
+    max-width: 100%;
+    height: 360px;
+    margin: 0 auto;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: var(--grid-columns);
+    grid-template-rows: var(--grid-rows);
+    gap: var(--gutter);
+
     i {
-      position: absolute;
-      display: inline-flex;
+      position: relative;
+      display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 50%;
-      background: $white;
+      background: white;
       z-index: 1;
       transform: translate(-50%, -50%);
-      @include box-shadow($box-shadow);
-      transition: all .2s cubic-bezier(.25, .65, .9, .75);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      transition: all 0.2s cubic-bezier(0.25, 0.65, 0.9, 0.75);
 
       &.icon {
         width: var(--icon-size);
@@ -46,88 +49,69 @@
       }
     }
 
-    &:not(.on-screen) {
-      i {
-        transform: translate(-50%, -50%);
-        left: 50%;
-        top: 50%;
-
-        &:not(:nth-child(1)) {
-          opacity: 0;
-        }
-      }
-    }
-
     &.on-screen {
 
       i {
         opacity: 1;
 
-        &:nth-child(1) {
-          left: 50%;
-          top: 50%;
-          font-size: 42px;
-          color: theme-color("warning");
-        }
-
         &:nth-child(2) {
-          left: calc(50% + (var(--gutter) * 1.7));
-          top: 50%;
+          grid-column: 2;
+          grid-row: 1;
         }
 
         &:nth-child(3) {
-          left: calc(50% + var(--gutter));
-          top: calc(50% + var(--gutter));
+          grid-column: 3;
+          grid-row: 2;
         }
 
         &:nth-child(4) {
-          left: calc(50% + var(--gutter));
-          top: calc(50% - var(--gutter));
+          grid-column: 3;
+          grid-row: 3;
         }
 
         &:nth-child(5) {
-          left: calc(50% + (var(--gutter) * 4));
-          top: 50%;
+          grid-column: 3;
+          grid-row: 1;
         }
 
         &:nth-child(6) {
-          left: calc(50% + (var(--gutter) * 2.7));
-          top: calc(50% + (var(--gutter) * 1.5));
+          grid-column: 2;
+          grid-row: 3;
         }
 
         &:nth-child(7) {
-          left: calc(50% + (var(--gutter) * 2.7));
-          top: calc(50% - (var(--gutter) * 1.5));
+          grid-column: 2;
+          grid-row: 2;
         }
 
         &:nth-child(8) {
-          left: calc(50% - (var(--gutter) * 1.7));
-          top: 50%;
+          grid-column: 1;
+          grid-row: 2;
         }
 
         &:nth-child(9) {
-          left: calc(50% - var(--gutter));
-          top: calc(50% + var(--gutter));
+          grid-column: 1;
+          grid-row: 3;
         }
 
         &:nth-child(10) {
-          left: calc(50% - var(--gutter));
-          top: calc(50% - var(--gutter));
+          grid-column: 1;
+          grid-row: 1;
         }
 
         &:nth-child(11) {
-          left: calc(50% - (var(--gutter) * 4));
-          top: 50%;
+          grid-column: 2;
+          grid-row: 1;
         }
 
         &:nth-child(12) {
-          left: calc(50% - (var(--gutter) * 2.7));
-          top: calc(50% + (var(--gutter) * 1.5));
+          grid-column: 3;
+          grid-row: 2;
         }
 
         &:nth-child(13) {
-          left: calc(50% - (var(--gutter) * 2.7));
-          top: calc(50% - (var(--gutter) * 1.5));
+          grid-column: 3;
+          grid-row: 3;
         }
       }
 
@@ -135,14 +119,13 @@
   }
 }
 
-
-// Blurable sections
+/* Blurable sections */
 
 .blur--hover {
   position: relative;
 
   .blur-item {
-    transition: 1s cubic-bezier(.19, 1, .22, 1);
+    transition: 1s cubic-bezier(0.19, 1, 0.22, 1);
     will-change: transform;
     filter: blur(0);
     opacity: 1;
@@ -160,9 +143,9 @@
 
   &:hover {
     .blur-item {
-      opacity: .8;
+      opacity: 0.8;
       filter: blur(10px);
-      transform: scale(.95);
+      transform: scale(0.95);
       z-index: 1;
     }
 
@@ -172,3 +155,4 @@
     }
   }
 }
+
