--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/cards/_card-animation-on-hover.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/cards/_card-animation-on-hover.scss
@@ -1,8 +1,14 @@
-
-.card-animation-on-hover {
-  transition: all .3s cubic-bezier(.34, 1.61, .7, 1);
-
-  &:hover {
-    transform: translate3d(0, -5px, 0);
+.card-container {
+  & .card-animation-on-hover {
+    transition: all 0.3s cubic-bezier(0.34, 1.61, 0.7, 1);
+    will-change: transform;
+    &:hover {
+      transform: translate3d(0, -5px, 0);
+    }
   }
+}
+
+/* Fallback for older browsers without cubic-bezier support */
+.card-container .card-animation-on-hover {
+  transition-timing-function: ease-out;
 }
