--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_spinners.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_spinners.scss
@@ -1,6 +1,12 @@
-//
-// Rotating border
-//
+:root {
+  --spinner-width: 2rem;
+  --spinner-height: 2rem;
+  --spinner-border-width: 0.25rem;
+  --spinner-border-width-sm: 0.15rem;
+  --spinner-width-sm: 1rem;
+  --spinner-height-sm: 1rem;
+  --spinner-color: currentColor;
+}
 
 @keyframes spinner-border {
   to {
@@ -10,29 +16,25 @@
 
 .spinner-border {
   display: inline-block;
-  width: $spinner-width;
-  height: $spinner-height;
+  width: var(--spinner-width);
+  height: var(--spinner-height);
   vertical-align: text-bottom;
-  border: $spinner-border-width solid currentColor;
+  border: var(--spinner-border-width) solid var(--spinner-color);
   border-right-color: transparent;
-  // stylelint-disable-next-line property-blacklist
   border-radius: 50%;
-  animation: spinner-border .75s linear infinite;
+  animation: spinner-border 0.75s linear infinite;
 }
 
 .spinner-border-sm {
-  width: $spinner-width-sm;
-  height: $spinner-height-sm;
-  border-width: $spinner-border-width-sm;
+  width: var(--spinner-width-sm);
+  height: var(--spinner-height-sm);
+  border-width: var(--spinner-border-width-sm);
 }
-
-//
-// Growing circle
-//
 
 @keyframes spinner-grow {
   0% {
     transform: scale(0);
+    opacity: 0;
   }
   50% {
     opacity: 1;
@@ -41,17 +43,15 @@
 
 .spinner-grow {
   display: inline-block;
-  width: $spinner-width;
-  height: $spinner-height;
+  width: var(--spinner-width);
+  height: var(--spinner-height);
   vertical-align: text-bottom;
-  background-color: currentColor;
-  // stylelint-disable-next-line property-blacklist
+  background-color: var(--spinner-color);
   border-radius: 50%;
   opacity: 0;
-  animation: spinner-grow .75s linear infinite;
+  animation: spinner-grow 0.75s linear infinite;
 }
 
 .spinner-grow-sm {
-  width: $spinner-width-sm;
-  height: $spinner-height-sm;
-}
+  width: var(--spinner-width-sm);
+  height:
