--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_media.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_media.scss
@@ -1,8 +1,10 @@
-.media {
-  display: flex;
-  align-items: flex-start;
+/* Style the container for media objects (e.g. images, videos, etc.) and their associated content */
+.media-container {
+  display: flex; /* Use flexbox to align media objects and their content */
+  align-items: flex-start; /* Align media objects and their content to the top of the container */
 }
 
-.media-body {
-  flex: 1;
+/* Style the content area for media objects */
+.media-content {
+  flex: 1; /* Make the content area take up the remaining space in the container */
 }
