--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_root.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_root.scss
@@ -1,5 +1,4 @@
 :root {
-  // Custom variable values only support SassScript inside `#{}`.
   @each $color, $value in $colors {
     --#{$color}: #{$value};
   }
@@ -12,8 +11,7 @@
     --breakpoint-#{$bp}: #{$value};
   }
 
-  // Use `inspect` for lists so that quoted items keep the quotes.
-  // See https://github.com/sass/sass/issues/2383#issuecomment-336349172
-  --font-family-sans-serif: #{inspect($font-family-sans-serif)};
-  --font-family-monospace: #{inspect($font-family-monospace)};
+  // Use `quotes` function to keep the quotes for strings in the list
+  --font-family-sans-serif: #{quotes($font-family-sans-serif)};
+  --font-family-monospace: #{quotes($font-family-monospace)};
 }
