--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/_info-areas.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/_info-areas.scss
@@ -1,61 +1,35 @@
+$icon-colors: (
+  primary: ($brand-primary, rgba($primary, 0.5)),
+  info: ($brand-info, rgba($info, 0.5)),
+  success: ($brand-success, rgba($success, 0.5)),
+  warning: ($brand-warning, rgba($warning, 0.5)),
+  danger: ($brand-danger, rgba($danger, 0.5))
+);
+
 .info {
   &.info-hover {
     .info-title {
-      transition: color .4s;
+      transition: color 0.4s;
     }
 
     &:hover {
       .icon {
-        @include transform-translate-y(-.5rem);
+        @include transform-translate-y(-0.5rem);
 
-        &.icon-primary {
-          &.icon-circle {
-            box-shadow: 0px 15px 30px 0px rgba(249, 99, 50, 0.3);
-          }
+        &.icon-circle {
+          box-shadow: 0px 15px 35px 0px rgba(0, 0, 0, 0.3);
         }
 
-        &.icon-info {
-          &.icon-circle {
-            box-shadow: 0px 15px 35px 0px rgba(44, 168, 255, 0.3);
-          }
-        }
-
-        &.icon-success {
-          &.icon-circle {
-            box-shadow: 0px 15px 35px 0px rgba(24, 206, 15, 0.3);
-          }
-        }
-
-        &.icon-warning {
-          &.icon-circle {
-            box-shadow: 0px 15px 35px 0px rgba(255, 178, 54, 0.3);
-          }
-        }
-
-        &.icon-danger {
-          &.icon-circle {
-            box-shadow: 0px 15px 35px 0px rgba(255, 54, 54, 0.3);
-          }
-        }
-
-        &.icon-info + .info-title {
-          color: $info;
-        }
-
-        &.icon-warning + .info-title {
-          color: $warning;
-        }
-
-        &.icon-danger + .info-title {
-          color: $danger;
-        }
-
-        &.icon-primary + .info-title {
-          color: $primary;
-        }
-
+        &.icon-info + .info-title,
+        &.icon-warning + .info-title,
+        &.icon-danger + .info-title,
+        &.icon-primary + .info-title,
         &.icon-success + .info-title {
-          color: $success;
+          color: nth($value, 1) when ($key = primary), $primary;
+          color: nth($value, 1) when ($key = info), $info;
+          color: nth($value, 1) when ($key = success), $success;
+          color: nth($value, 1) when ($key = warning), $warning;
+          color: nth($value, 1) when ($key = danger), $danger;
         }
       }
     }
@@ -63,7 +37,7 @@
 
   .icon {
     color: $default;
-    transition: transform .4s, box-shadow .4s;
+    transition: transform 0.4s, box-shadow 0.4s;
 
     > i {
       font-size: 2.3em;
@@ -131,50 +105,13 @@
     overflow: hidden;
   }
 
-}
+  @each $color, $value in $icon-colors {
+    &.icon-#{$color} {
+      color: nth($value, 1);
 
-.icon {
-  &.icon-primary {
-    color: $brand-primary;
-
-    &.icon-circle {
-      box-shadow: 0px 9px 30px -6px rgba($primary, .5);
+      &.icon-circle {
+        box-shadow: 0px 9px 30px -6px nth($value, 2);
+      }
     }
-  }
-
-  &.icon-info {
-    color: $brand-info;
-
-    &.icon-circle {
-      box-shadow: 0px 9px 30px -6px rgba($info, .5);
-    }
-  }
-
-  &.icon-success {
-    color: $brand-success;
-
-    &.icon-circle {
-      box-shadow: 0px 9px 30px -6px rgba($success, .5);
-    }
-  }
-
-  &.icon-warning {
-    color: $brand-warning;
-
-    &.icon-circle {
-      box-shadow: 0px 9px 30px -6px rgba($warning, .5);
-    }
-  }
-
-  &.icon-danger {
-    color: $brand-danger;
-
-    &.icon-circle {
-      box-shadow: 0px 9px 30px -6px rgba($danger, .5);
-    }
-  }
-
-  &.icon-white {
-    color: $white;
   }
 }
