--- a/dashboard/home/templates/static/assets/scss/black-dashboard/custom/utilities/_text.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/custom/utilities/_text.scss
@@ -1,36 +1,22 @@
-// Weight and italics
+// Font weights
+$font-weights: (
+  300: normal,
+  400: normal,
+  500: normal,
+  600: bold,
+  700: bold,
+  800: bold,
+  900: bold
+);
 
-.font-weight-300 {
-  font-weight: 300 !important;
+@each $weight, $style in $font-weights {
+  .font-weight-#{$weight} {
+    font-weight: #{$weight} !important;
+    font-style: $style;
+  }
 }
-
-.font-weight-400 {
-  font-weight: 400 !important;
-}
-
-.font-weight-500 {
-  font-weight: 500 !important;
-}
-
-.font-weight-600 {
-  font-weight: 600 !important;
-}
-
-.font-weight-700 {
-  font-weight: 700 !important;
-}
-
-.font-weight-800 {
-  font-weight: 800 !important;
-}
-
-.font-weight-900 {
-  font-weight: 900 !important;
-}
-
 
 // Text decorations
-
 .text-underline {
   text-decoration: underline;
 }
@@ -39,62 +25,39 @@
   text-decoration: line-through;
 }
 
-
 // Line heights
+$line-heights: (
+  100: 1,
+  110: 1.1,
+  120: 1.2,
+  130: 1.3,
+  140: 1.4,
+  150: 1.5,
+  160: 1.6,
+  170: 1.7,
+  180: 1.8
+);
 
-.lh-100 {
-  line-height: 1;
+@each $height, $value in $line-heights {
+  .lh-#{$height} {
+    line-height: #{$value};
+  }
 }
 
-.lh-110 {
-  line-height: 1.1;
-}
-
-.lh-120 {
-  line-height: 1.2;
-}
-
-.lh-130 {
-  line-height: 1.3;
-}
-
-.lh-140 {
-  line-height: 1.4;
-}
-
-.lh-150 {
-  line-height: 1.5;
-}
-
-.lh-160 {
-  line-height: 1.6;
-}
-
-.lh-170 {
-  line-height: 1.7;
-}
-
-.lh-180 {
-  line-height: 1.8;
-}
-
-//Contextual colors
-
+// Contextual colors
 .text-muted {
   color: $text-muted !important;
 }
 
-
 // Letter spacings
+$letter-spacings: (
+  1: .0625rem,
+  15: .09375rem,
+  2: 0.125rem
+);
 
-.ls-1 {
-  letter-spacing: .0625rem;
-}
-
-.ls-15 {
-  letter-spacing: .09375rem;
-}
-
-.ls-2 {
-  letter-spacing: 0.125rem;
+@each $spacing, $value in $letter-spacings {
+  .ls-#{$spacing} {
+    letter-spacing: #{$value};
+  }
 }
