--- a/dashboard/home/templates/static/assets/scss/black-dashboard.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard.scss
@@ -16,18 +16,12 @@
 
 // Core
 
-@import "black-dashboard/custom/functions";
-@import "black-dashboard/bootstrap/functions";
-
-@import "black-dashboard/custom/variables";
-@import "black-dashboard/bootstrap/variables";
-
-@import "black-dashboard/custom/mixins";
-@import "black-dashboard/bootstrap/mixins";
+@import "black-dashboard/functions";
+@import "black-dashboard/variables";
+@import "black-dashboard/mixins";
 
 // Bootstrap components
 
-@import "black-dashboard/bootstrap/root";
 @import "black-dashboard/bootstrap/reboot";
 @import "black-dashboard/bootstrap/type";
 @import "black-dashboard/bootstrap/images";
@@ -57,86 +51,66 @@
 @import "black-dashboard/bootstrap/tooltip";
 @import "black-dashboard/bootstrap/popover";
 @import "black-dashboard/bootstrap/carousel";
-@import "black-dashboard/bootstrap/utilities";
-@import "black-dashboard/bootstrap/print";
 
 // Custom components
 
-@import "black-dashboard/custom/reboot.scss";
-@import "black-dashboard/custom/global.scss";
-@import "black-dashboard/custom/utilities.scss";
-@import "black-dashboard/custom/alerts.scss";
-@import "black-dashboard/custom/avatars.scss";
-@import "black-dashboard/custom/badge.scss";
-@import "black-dashboard/custom/buttons.scss";
-@import "black-dashboard/custom/close.scss";
-@import "black-dashboard/custom/custom-forms.scss";
-@import "black-dashboard/custom/dropdown.scss";
-@import "black-dashboard/custom/footer.scss";
-@import "black-dashboard/custom/forms.scss";
-@import "black-dashboard/custom/grid.scss";
-@import "black-dashboard/custom/icons.scss";
-@import "black-dashboard/custom/images.scss";
-@import "black-dashboard/custom/input-group.scss";
-@import "black-dashboard/custom/info-areas.scss";
-@import "black-dashboard/custom/modal.scss";
-@import "black-dashboard/custom/nav.scss";
-@import "black-dashboard/custom/navbar.scss";
-@import "black-dashboard/custom/pagination.scss";
-@import "black-dashboard/custom/tabs.scss";
-@import "black-dashboard/custom/pills.scss";
-@import "black-dashboard/custom/popover.scss";
-@import "black-dashboard/custom/progress.scss";
-@import "black-dashboard/custom/type.scss";
+@import "black-dashboard/custom/reboot";
+@import "black-dashboard/custom/global";
+@import "black-dashboard/custom/utilities";
+@import "black-dashboard/custom/alerts";
+@import "black-dashboard/custom/avatars";
+@import "black-dashboard/custom/badge";
+@import "black-dashboard/custom/buttons";
+@import "black-dashboard/custom/close";
+@import "black-dashboard/custom/custom-forms";
+@import "black-dashboard/custom/dropdown";
+@import "black-dashboard/custom/footer";
+@import "black-dashboard/custom/forms";
+@import "black-dashboard/custom/grid";
+@import "black-dashboard/custom/icons";
+@import "black-dashboard/custom/images";
+@import "black-dashboard/custom/input-group";
+@import "black-dashboard/custom/info-areas";
+@import "black-dashboard/custom/modal";
+@import "black-dashboard/custom/nav";
+@import "black-dashboard/custom/navbar";
+@import "black-dashboard/custom/pagination";
+@import "black-dashboard/custom/tabs";
+@import "black-dashboard/custom/pills";
+@import "black-dashboard/custom/popover";
+@import "black-dashboard/custom/progress";
+@import "black-dashboard/custom/type";
 @import "black-dashboard/custom/tables";
 @import "black-dashboard/custom/checkboxes-radio";
 @import "black-dashboard/custom/fixed-plugin";
-@import "black-dashboard/custom/sidebar-and-main-panel.scss";
-@import "black-dashboard/custom/misc.scss";
-@import "black-dashboard/custom/rtl.scss";
-@import "black-dashboard/custom/timeline.scss";
+@import "black-dashboard/custom/sidebar-and-main-panel";
+@import "black-dashboard/custom/misc";
+@import "black-dashboard/custom/rtl";
+@import "black-dashboard/custom/timeline";
 
 // Vendor / Plugins
 
-@import "black-dashboard/custom/vendor/plugin-datetimepicker.scss";
-@import "black-dashboard/custom/vendor/plugin-nouislider.scss";
-@import "black-dashboard/custom/vendor/plugin-fullcalendar.scss";
-@import "black-dashboard/custom/vendor/plugin-sweetalert2.scss";
-@import "black-dashboard/custom/vendor/plugin-bootstrap-switch.scss";
-@import "black-dashboard/custom/vendor/plugin-bootstrap-select.scss";
-@import "black-dashboard/custom/vendor/plugin-jasny-fileupload.scss";
-@import "black-dashboard/custom/vendor/plugin-tagsinput.scss";
-@import "black-dashboard/custom/vendor/plugin-perfect-scrollbar.scss";
-@import "black-dashboard/custom/vendor/plugin-jquery.jvectormap.scss";
-@import "black-dashboard/custom/vendor/plugin-datatables.net.scss";
-@import "black-dashboard/custom/vendor/plugin-animate-bootstrap-notify.scss";
-@import "black-dashboard/custom/vendor/plugin-card-wizard.scss";
-@import "black-dashboard/custom/vendor/plugin-chartjs.scss";
+@import "black-dashboard/custom/vendor/plugin-datetimepicker";
+@import "black-dashboard/custom/vendor/plugin-nouislider";
+@import "black-dashboard/custom/vendor/plugin-fullcalendar";
+@import "black-dashboard/custom/vendor/plugin-sweetalert2";
+@import "black-dashboard/custom/vendor/plugin-bootstrap-switch";
+@import "black-dashboard/custom/vendor/plugin-bootstrap-select";
+@import "black-dashboard/custom/vendor/plugin-jasny-fileupload";
+@import "black-dashboard/custom/vendor/plugin-tagsinput";
+@import "black-dashboard/custom/vendor/plugin-perfect-scrollbar";
+@import "black-dashboard/custom/vendor/plugin-jquery.jvectormap";
+@import "black-dashboard/custom/vendor/plugin-datatables.net";
+@import "black-dashboard/custom/vendor/plugin-animate-bootstrap-notify";
+@import "black-dashboard/custom/vendor/plugin-card-wizard";
+@import "black-dashboard/custom/vendor/plugin-chartjs";
 
 // example pages and sections
 
-@import "black-dashboard/custom/example-pages.scss";
+@import "black-dashboard/custom/example-pages";
 
 // light mode
 
-@import "black-dashboard/custom/white-content.scss";
+@import "black-dashboard/custom/white-content";
 
-// Cards
-
-@import 'black-dashboard/custom/card';
-@import "black-dashboard/custom/cards/card-chart";
-@import "black-dashboard/custom/cards/card-map";
-@import "black-dashboard/custom/cards/card-user";
-@import "black-dashboard/custom/cards/card-task";
-@import "black-dashboard/custom/cards/card-animation-on-hover";
-@import "black-dashboard/custom/cards/card-collapse";
-@import "black-dashboard/custom/cards/card-contributions";
-@import "black-dashboard/custom/cards/card-lock";
-@import "black-dashboard/custom/cards/card-pricing";
-@import "black-dashboard/custom/cards/card-profile";
-@import "black-dashboard/custom/cards/card-plain";
-@import "black-dashboard/custom/cards/card-register";
-@import "black-dashboard/custom/cards/card-stats";
-@import "black-dashboard/custom/cards/card-subcategories";
-@import "black-dashboard/custom/cards/card-testimonials";
-@import "black-dashboard/custom/cards/card-wizard";
+// C
