--- a/dashboard/home/templates/includes/sample_footer.html
+++ b/dashboard/home/templates/includes/sample_footer.html
@@ -12,7 +12,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="https://appseed.us/support/" target="_blank" class="nav-link">
+        <a href="https://afadesign.co/" target="_blank" class="nav-link">
           Support
         </a>
       </li>
