--- a/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_alert.scss
+++ b/dashboard/home/templates/static/assets/scss/black-dashboard/bootstrap/_alert.scss
@@ -1,31 +1,28 @@
-//
 // Base styles
-//
-
 .alert {
   position: relative;
   padding: $alert-padding-y $alert-padding-x;
   margin-bottom: $alert-margin-bottom;
   border: $alert-border-width solid transparent;
-  @include border-radius($alert-border-radius);
-}
+  border-radius: $alert-border-radius;
 
-// Headings for larger alerts
-.alert-heading {
-  // Specified to prevent conflicts of changing $headings-color
-  color: inherit;
-}
+  // Reset padding when there's no close button
+  &:not(.alert-dismissible) {
+    padding-right: $alert-padding-x;
+  }
 
-// Provide class for links that match alerts
-.alert-link {
-  font-weight: $alert-link-font-weight;
-}
+  // Headings for larger alerts
+  .alert-heading {
+    color: inherit;
+  }
 
+  // Provide class for links that match alerts
+  .alert-link {
+    font-weight: $alert-link-font-weight;
+  }
+}
 
 // Dismissible alerts
-//
-// Expand the right padding and account for the close button's positioning.
-
 .alert-dismissible {
   padding-right: $close-font-size + $alert-padding-x * 2;
 
@@ -36,16 +33,16 @@
     right: 0;
     padding: $alert-padding-y $alert-padding-x;
     color: inherit;
+    margin: 0; // Reset margin
   }
 }
 
-
 // Alternate styles
-//
-// Generate contextual modifier classes for colorizing the alert.
-
 @each $color, $value in $theme-colors {
   .alert-#{$color} {
     @include alert-variant(theme-color-level($color, $alert-bg-level), theme-color-level($color, $alert-border-level), theme-color-level($color, $alert-color-level));
   }
 }
+
+// Mixin to generate contextual modifier classes for colorizing the alert
+@mixin alert-variant($bg, $border, $
